--- a/mcp-server/env.example
+++ b/mcp-server/env.example
@@ -90,6 +90,9 @@ HOST=0.0.0.0
 PORT=8080
 LOG_LEVEL=info
 
+# MCP Server API Key for authentication
+MCP_API_KEY=1234
+
 # ========================================
 # DEPLOYMENT NOTES
 # ========================================
